--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img class="d-block w-100" src="https://c1.wallpaperflare.com/preview/65/348/1021/smoke-camera-person-hand.jpg"/>
+                      <img class="d-block w-100 h-100" src="https://c1.wallpaperflare.com/preview/65/348/1021/smoke-camera-person-hand.jpg"/>
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="https://i.pinimg.com/originals/cb/3e/1b/cb3e1bcac903e82f6d7eb4a344c178d7.jpg" alt="Second slide">
+                      <img class="d-block w-100 h-100" src="https://i.pinimg.com/originals/cb/3e/1b/cb3e1bcac903e82f6d7eb4a344c178d7.jpg" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="https://wallpapercave.com/wp/1Odq43G.jpg" alt="Third slide">
+                      <img class="d-block w-100 h-100" src="https://wallpapercave.com/wp/1Odq43G.jpg" alt="Third slide">
                     </div>
                   </div>
                 </div>
